tests/nonexistent_include.c.t
@ include does_not_exists.t
